--- a/app/src/main/res/layout/discover_movies_fragment.xml
+++ b/app/src/main/res/layout/discover_movies_fragment.xml
@@ -18,15 +18,12 @@
             app:tabIndicatorColor="@color/color_red"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/viewpager_main"/>
-
+            app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.viewpager.widget.ViewPager
             android:id="@+id/viewpager_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintTop_toBottomOf="@+id/tabs"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
