Top lists finished?

--- a/app/src/main/res/layout/top_list_movies_fragment.xml
+++ b/app/src/main/res/layout/top_list_movies_fragment.xml
@@ -4,7 +4,8 @@
         xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.discover.topLists.TopListMovies">
+        tools:context=".screens.discover.topLists.TopListMovies"
+        android:background="@color/color_background">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
@@ -14,6 +15,6 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
