--- a/app/src/main/res/layout/genre_movies_fragment.xml
+++ b/app/src/main/res/layout/genre_movies_fragment.xml
@@ -8,8 +8,21 @@
         tools:context=".screens.discover.genre.GenreMovies"
         android:background="@color/color_background">
 
+
+    <pl.droidsonroids.gif.GifImageView
+            android:id="@+id/gif_progress_bar"
+            android:visibility="visible"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            android:src="@drawable/loading3" android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/recycler_view" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="@+id/recycler_view"/>
+
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_view"
+            android:visibility="gone"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="102dp"
