--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -9,14 +9,21 @@
         android:layout_marginTop="5dp"
         android:background="@color/color_background">
 
-
     <FrameLayout
             android:id="@+id/frame"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
+        <pl.droidsonroids.gif.GifImageView
+                android:id="@+id/gif_progress_bar"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                android:src="@drawable/loading3"/>
+
         <ImageView
                 android:id="@+id/list_poster"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +33,7 @@
         <View
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/actionbar_gradient_dark" />
+                android:background="@drawable/actionbar_gradient_dark"/>
     </FrameLayout>
 
     <TextView
