--- a/app/src/main/res/layout/activity_movie_list.xml
+++ b/app/src/main/res/layout/activity_movie_list.xml
@@ -7,7 +7,7 @@
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        tools:context=".screens.movielist.MovieListActivity">
+        tools:context=".screens.discover.topLists.movielist.MovieListActivity">
 
     <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/app_bar"
@@ -24,7 +24,7 @@
                 android:background="@color/color_background"
                 app:toolbarId="@+id/toolbar"
                 app:contentScrim="@color/color_background"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed">
 
             <ImageView
                     android:id="@+id/header_image_view"
@@ -35,6 +35,7 @@
                     android:id="@+id/toolbar"
                     android:layout_height="?attr/actionBarSize"
                     android:layout_width="match_parent"
+                    android:minHeight="?attr/actionBarSize"
                     app:layout_collapseMode="pin"
                     app:layout_scrollFlags="scroll|enterAlways"
                     app:popupTheme="@style/AppTheme.PopupOverlay"/>
