--- a/app/src/main/res/menu/menu_movie_list.xml
+++ b/app/src/main/res/menu/menu_movie_list.xml
@@ -1,7 +1,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context="com.stameni.com.whatshouldiwatch.screens.movielist.MovieListActivity">
+      tools:context=".screens.discover.topLists.movielist.MovieListActivity">
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
