--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -3,12 +3,12 @@
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-    android:padding="2dp"
-android:background="@color/color_background">
+        android:padding="2dp"
+        android:background="@color/color_background">
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/movie_item_cl"
             android:layout_width="match_parent"
-            android:layout_height="169dp">
+            android:layout_height="@dimen/_169sdp">
 
         <ImageView
                 android:id="@+id/loading_iv"
