--- a/app/src/main/res/layout/now_playing_movies_fragment.xml
+++ b/app/src/main/res/layout/now_playing_movies_fragment.xml
@@ -2,13 +2,20 @@
 <FrameLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        tools:context=".screens.discover.nowPlaying.NowPlayingMovies"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".screens.discover.nowPlaying.NowPlayingMovies">
+        android:background="@color/color_background">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Hello"/>
+            android:layout_marginBottom="102dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
 </FrameLayout>
