--- a/app/src/main/res/layout/activity_movie_grid.xml
+++ b/app/src/main/res/layout/activity_movie_grid.xml
@@ -31,7 +31,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/movie_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
