--- a/app/src/main/res/layout/content_movie_list.xml
+++ b/app/src/main/res/layout/content_movie_list.xml
@@ -11,7 +11,7 @@
 android:background="@color/color_background">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/movie_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
