--- a/app/src/main/res/layout/movie_grid_item.xml
+++ b/app/src/main/res/layout/movie_grid_item.xml
@@ -1,20 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:padding="2dp"
         android:background="@color/color_background">
+
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/movie_item_cl"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/_169sdp">
+            android:layout_height="169dp">
 
-        <ImageView
-                android:id="@+id/loading_iv"
-                android:src="@drawable/ic_loading"
-                android:layout_height="match_parent"
-                android:layout_width="match_parent"/>
+        <com.pollux.widget.DualProgressView
+                android:id="@+id/gif_progress_bar"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_gravity="center"
+                app:dpv_inner_color="@color/color_red"
+                app:dpv_inner_padding="8dp"
+                app:dpv_outer_color="@color/color_text"
+                app:dpv_thickness="2dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
         <ImageView
                 android:id="@+id/myImageView"
