--- a/app/src/main/res/layout/now_playing_movies_fragment.xml
+++ b/app/src/main/res/layout/now_playing_movies_fragment.xml
@@ -9,7 +9,7 @@
         android:background="@color/color_background">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/movie_recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginBottom="102dp"
