--- a/app/src/main/res/layout/top_list_movies_fragment.xml
+++ b/app/src/main/res/layout/top_list_movies_fragment.xml
@@ -8,7 +8,7 @@
         android:background="@color/color_background">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/movie_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="102dp"
