--- a/app/src/main/res/layout/upcoming_movies_fragment.xml
+++ b/app/src/main/res/layout/upcoming_movies_fragment.xml
@@ -9,7 +9,7 @@
         tools:context=".screens.discover.upcoming.UpcomingMovies">
 
     <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view"
+            android:id="@+id/movie_recycler_view"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginBottom="102dp"
