--- a/app/src/main/res/layout/upcoming_movies_fragment.xml
+++ b/app/src/main/res/layout/upcoming_movies_fragment.xml
@@ -8,6 +8,20 @@
         android:background="@color/color_background"
         tools:context=".screens.discover.upcoming.UpcomingMovies">
 
+    <com.pollux.widget.DualProgressView
+            android:id="@+id/gif_progress_bar"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_gravity="center"
+            app:dpv_inner_color="@color/color_red"
+            app:dpv_inner_padding="8dp"
+            app:dpv_outer_color="@color/color_text"
+            app:dpv_thickness="2dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_recycler_view"
             android:layout_width="0dp"
