No commits in 5 days STRIKES AGAIN

--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -45,7 +45,7 @@
             android:textColor="@color/color_text"
             android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
             android:layout_width="0dp"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:textSize="16dp"
             android:ellipsize="end"
             android:maxLines="2"
@@ -60,7 +60,7 @@
             android:textColor="@color/light_gray"
             android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry."
             android:layout_width="0dp"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:ellipsize="end"
             android:maxLines="2"
