--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -1,79 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
         android:orientation="horizontal"
         android:background="@color/color_background"
         android:layout_width="match_parent"
         android:layout_margin="5dp"
         android:layout_height="100dp">
 
-    <LinearLayout
-            android:orientation="horizontal"
+    <ImageView
+            android:id="@+id/movie_poster"
+            android:layout_width="65dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_placeholder"
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toStartOf="@+id/guideline1" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+            android:id="@+id/movie_title"
+            android:text="Shawshank Redemption"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_text"
+            android:textSize="24dp"
+            android:maxLines="1"
+            android:maxLength="40"
+            android:ellipsize="end"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toEndOf="@+id/movie_poster"
+            app:layout_constraintTop_toTopOf="parent"/>
+    <TextView
+            android:id="@+id/year_text_view"
+            android:text="1989"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/color_text"
+            android:textSize="16dp"
+            android:maxLines="1"
+            android:maxLength="4"
+            android:layout_marginStart="16dp"
+
+            app:layout_constraintStart_toEndOf="@+id/movie_poster"
+            app:layout_constraintTop_toTopOf="@+id/genres_text_view"/>
+
+    <TextView
+            android:id="@+id/genres_text_view"
+            android:text="Action Drama Comedy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/light_gray"
+            android:textSize="16dp"
+            android:maxLines="1"
+            android:maxLength="40"
+            android:ellipsize="end"
+            android:layout_marginTop="16dp"
+            app:layout_constraintStart_toEndOf="@+id/year_text_view"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintHorizontal_bias="0.102"
+            app:layout_constraintTop_toBottomOf="@+id/movie_title" />
+
+    <View
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/light_gray"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <ImageView
-                android:id="@+id/movie_poster"
-                android:layout_width="65dp"
-                android:padding="10dp"
-                android:layout_height="match_parent"/>
+    <androidx.constraintlayout.widget.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintGuide_begin="8dp"
+            android:id="@+id/guideline1"/>
 
-        <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="8dp"
-                android:orientation="vertical">
+    <androidx.constraintlayout.widget.Guideline
+            android:orientation="vertical"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/guideline6"
+            app:layout_constraintGuide_end="8dp"/>
 
-            <TextView
-                    android:id="@+id/movie_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textColor="@color/color_text"
-                    android:textSize="24dp"
-                    android:layout_marginTop="16dp"
-                    android:maxLines="1"
-                    android:maxLength="40"
-                    android:ellipsize="end"/>
-
-            <LinearLayout
-                    android:orientation="horizontal"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="16dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                <TextView
-                        android:id="@+id/year_text_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginRight="16dp"
-                        android:textColor="@color/color_text"
-                        android:textSize="16dp"
-                        android:maxLines="1"
-                        android:maxLength="4"/>
-
-                <TextView
-                        android:id="@+id/genres_text_view"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/light_gray"
-                        android:textSize="16dp"
-                        android:maxLines="1"
-                        android:maxLength="40"
-                        android:ellipsize="end"/>
-            </LinearLayout>
-
-            <RelativeLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                <View
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:layout_alignParentBottom="true"
-                        android:background="@color/light_gray"/>
-            </RelativeLayout>
-        </LinearLayout>
-    </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
