--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="color_text">#fff</color>
     <color name="color_red">#ff5252</color>
     <color name="light_gray">#888</color>
+    <color name="dark_gray">#555</color>
 
 </resources>
