--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -20,7 +20,7 @@
     <TextView
             android:id="@+id/movie_title"
             android:text="Shawshank Redemption"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/color_text"
             android:textSize="24dp"
@@ -30,7 +30,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toEndOf="@+id/movie_poster"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/guideline6"
+            app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
             android:id="@+id/year_text_view"
             android:text="1989"
@@ -43,7 +45,11 @@
             android:layout_marginStart="16dp"
 
             app:layout_constraintStart_toEndOf="@+id/movie_poster"
-            app:layout_constraintTop_toTopOf="@+id/genres_text_view"/>
+            app:layout_constraintHorizontal_chainStyle="spread_inside"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/genres_text_view"
+            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+    />
 
     <TextView
             android:id="@+id/genres_text_view"
@@ -55,11 +61,11 @@
             android:maxLines="1"
             android:maxLength="40"
             android:ellipsize="end"
-            android:layout_marginTop="16dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/year_text_view"
-            app:layout_constraintEnd_toStartOf="@+id/guideline6"
-            app:layout_constraintHorizontal_bias="0.102"
-            app:layout_constraintTop_toBottomOf="@+id/movie_title" />
+            android:layout_marginStart="8dp"
+    />
 
     <View
             android:layout_width="match_parent"
@@ -68,7 +74,7 @@
             android:background="@color/light_gray"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent" android:id="@+id/view"/>
 
     <androidx.constraintlayout.widget.Guideline
             android:orientation="vertical"
