--- a/app/src/main/res/layout/single_movie_recommendation_item.xml
+++ b/app/src/main/res/layout/single_movie_recommendation_item.xml
@@ -4,15 +4,15 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
+        android:layout_width="120dp"
         android:background="@color/color_background"
         android:layout_margin="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/movie_item_cl"
-            android:layout_width="120dp"
+            android:layout_width="match_parent"
             android:background="@drawable/border"
-            android:layout_height="160dp">
+            android:layout_height="169dp">
 
         <TextView
                 android:id="@+id/movie_name"
