--- a/app/src/main/res/layout/content_movie_list.xml
+++ b/app/src/main/res/layout/content_movie_list.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".screens.discover.topLists.movielist.MovieListActivity"
-android:background="@color/color_background">
+        android:background="@color/color_background">
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/movie_recycler_view"
@@ -19,4 +19,4 @@ android:background="@color/color_background">
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"/>
 
-</androidx.core.widget.NestedScrollView>
+</androidx.constraintlayout.widget.ConstraintLayout>
