--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -43,7 +43,7 @@
             android:maxLines="1"
             android:maxLength="4"
             android:layout_marginStart="16dp"
-
+            app:layout_goneMarginStart="16dp"
             app:layout_constraintStart_toEndOf="@+id/movie_poster"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/genres_text_view"
