--- a/app/src/main/res/layout/activity_single_movie.xml
+++ b/app/src/main/res/layout/activity_single_movie.xml
@@ -4,6 +4,8 @@
         xmlns:tools="http://schemas.android.com/tools"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/mRootView"
+        android:fillViewport="true"
+        android:fadingEdge="none"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/color_background">
@@ -42,40 +44,50 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
 
-        <ImageButton
-                android:id="@+id/button2"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_play"
-                android:scaleType="centerCrop"
-                android:background="@android:color/transparent"
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/buttons_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/poster_image"
+                app:layout_constraintBottom_toTopOf="@id/imdb_placeholder"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/button"
-                app:layout_constraintTop_toBottomOf="@id/poster_image"/>
+                app:layout_constraintEnd_toStartOf="parent">
 
-        <ImageButton
-                android:id="@+id/button"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_watch_later"
-                android:scaleType="centerCrop"
-                android:background="@android:color/transparent"
-                app:layout_constraintTop_toBottomOf="@id/poster_image"
-                app:layout_constraintStart_toEndOf="@+id/button2"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toStartOf="@+id/button3"/>
-        <ImageButton
-                android:id="@+id/button3"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/ic_share"
-                android:scaleType="centerCrop"
-                android:background="@android:color/transparent"
-                app:layout_constraintTop_toBottomOf="@id/poster_image"
-                app:layout_constraintStart_toEndOf="@+id/button"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintEnd_toEndOf="parent"/>
+            <ImageButton
+                    android:id="@+id/button2"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_play"
+                    android:scaleType="centerCrop"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@+id/button"
+                    app:layout_constraintTop_toTopOf="@id/buttons_group"
+                    app:layout_constraintBottom_toBottomOf="@id/buttons_group"/>
+
+            <ImageButton
+                    android:id="@+id/button"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_watch_later"
+                    android:scaleType="centerCrop"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintTop_toTopOf="@id/buttons_group"
+                    app:layout_constraintBottom_toBottomOf="@id/buttons_group"
+                    app:layout_constraintStart_toEndOf="@+id/button2"
+                    app:layout_constraintEnd_toStartOf="@+id/button3"/>
+            <ImageButton
+                    android:id="@+id/button3"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/ic_share"
+                    android:scaleType="centerCrop"
+                    android:background="@android:color/transparent"
+                    app:layout_constraintTop_toTopOf="@id/buttons_group"
+                    app:layout_constraintBottom_toBottomOf="@id/buttons_group"
+                    app:layout_constraintStart_toEndOf="@+id/button"
+                    app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.Guideline
                 android:orientation="vertical"
