--- a/app/src/main/res/layout/activity_single_actor.xml
+++ b/app/src/main/res/layout/activity_single_actor.xml
@@ -49,6 +49,13 @@
                         app:civ_border_width="1dp"
                         app:civ_border_color="@color/light_gray"
                         android:layout_gravity="center"/>
+                <TextView
+                        android:id="@+id/person_age"
+                        android:textColor="@color/color_text"
+                        android:text="44 years old"
+                        android:textAlignment="center"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
 
                 <TextView
                         android:id="@+id/person_name"
