--- a/app/src/main/res/layout/list_movie_item.xml
+++ b/app/src/main/res/layout/list_movie_item.xml
@@ -10,7 +10,7 @@
 
     <ImageView
             android:id="@+id/movie_poster"
-            android:layout_width="65dp"
+            android:layout_width="64dp"
             android:padding="10dp"
             android:layout_height="match_parent"
             app:layout_constraintStart_toStartOf="@+id/guideline1"
@@ -19,16 +19,15 @@
 
     <TextView
             android:id="@+id/movie_title"
-            android:text="Shawshank Redemption"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/color_text"
-            android:textSize="24dp"
+            android:textSize="16dp"
             android:maxLines="1"
             android:maxLength="40"
             android:ellipsize="end"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintStart_toEndOf="@+id/movie_poster"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginEnd="8dp"
@@ -36,17 +35,16 @@
             app:layout_constraintHorizontal_bias="0.0"/>
     <TextView
             android:id="@+id/year_text_view"
-            android:text="1989"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/color_text"
             android:textSize="16dp"
             android:maxLines="1"
             android:maxLength="4"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="24dp"
             app:layout_constraintStart_toEndOf="@+id/movie_poster"
             app:layout_constraintHorizontal_chainStyle="spread_inside"
             app:layout_constraintTop_toTopOf="@+id/genres_text_view"
@@ -57,7 +55,6 @@
 
     <TextView
             android:id="@+id/genres_text_view"
-            android:text="Action Drama Comedy"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="@color/light_gray"
@@ -65,7 +62,7 @@
             android:maxLines="1"
             android:maxLength="40"
             android:ellipsize="end"
-            android:layout_marginBottom="8dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginEnd="8dp"
             app:layout_goneMarginStart="16dp"
             app:layout_constraintHorizontal_bias="0.5"
@@ -79,9 +76,11 @@
             android:layout_height="1dp"
             android:layout_alignParentBottom="true"
             android:background="@color/light_gray"
+            android:layout_marginStart="80dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" android:id="@+id/view"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/view"/>
 
     <androidx.constraintlayout.widget.Guideline
             android:orientation="vertical"
