--- a/app/src/main/res/layout/single_movie_actor_item.xml
+++ b/app/src/main/res/layout/single_movie_actor_item.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools" android:orientation="vertical"
+        android:orientation="vertical"
         android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:background="@color/dark_gray">
@@ -22,20 +22,20 @@
 
     <TextView
             android:id="@+id/actor_name"
-            android:textColor="@color/color_text"
-            android:text="Keanu Reeves"
-            android:maxLines="1"
-            android:ellipsize="end"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/color_text"
+            android:textAlignment="center"
+            android:maxLines="1"
+            android:ellipsize="end"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/actor_image"
-            app:layout_constraintBottom_toTopOf="@+id/as_placeholder"/>
+            app:layout_constraintBottom_toTopOf="@+id/as_placeholder"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     <TextView
             android:id="@+id/as_placeholder"
@@ -52,7 +52,6 @@
     <TextView
             android:id="@+id/cast_name"
             android:textColor="@color/color_text"
-            android:text="Neo"
             android:maxLines="1"
             android:ellipsize="end"
             android:layout_marginStart="8dp"
