Swipe to delete/watched movie

--- a/app/src/main/res/layout/my_list_movie_item.xml
+++ b/app/src/main/res/layout/my_list_movie_item.xml
@@ -20,14 +20,14 @@
                 android:orientation="horizontal">
 
             <Button
-                    android:id="@+id/info_button"
+                    android:id="@+id/watched_button"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginEnd="8dp"
                     android:background="@drawable/ic_watched"/>
 
             <Button
-                    android:id="@+id/edit_button"
+                    android:id="@+id/delete_button"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginStart="8dp"
