--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="color_background">#333</color>
+    <color name="color_background_dark">#222</color>
     <color name="color_text">#fff</color>
     <color name="color_red">#ff5252</color>
     <color name="light_gray">#888</color>
